use JDK 21